--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="">
+    <link rel="icon" href="img/marketpal-logo.svg">
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/home.css">
@@ -18,8 +18,12 @@
         </div>
         <section class="logo-nav">
             <div class="logo">
-                <img id="logo-white" src="img/themarketpal-white.svg" alt="The MarketPal Logo">
-                <img id="logo-black" src="img/themarketpal-black.svg" alt="The MarketPal Logo">
+                <a href="index.html">
+                    <img id="logo-white" src="img/themarketpal-white.svg" alt="The MarketPal Logo">
+                </a>
+                <a href="index.html">
+                    <img id="logo-black" src="img/themarketpal-black.svg" alt="The MarketPal Logo">
+                </a>
                 <hr class="logo-hr">
                 <hr class="logo-hr-2">
             </div>
