Created blog page html and css. Also added contents

--- a/portfolio.html
+++ b/portfolio.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="">
-    <title>Home</title>
+    <link rel="icon" href="img/marketpal-logo.svg">
+    <title>Portfolio</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/portfolio.css">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
@@ -133,32 +133,41 @@
                 <section class="watchlist-containers">
                     <div class="long-term">
                         <table>
-                            <caption>Investment Watchlist</caption>
+                            <caption>Long-Term Watchlist</caption>
                             <tr>
                                 <th>Stock</th>
+                                <th>Status</th>
                             </tr>
                             <tr>
                                 <td>NVIDIA Corporation (NASDAQ: NVDA)</td>
+                                <td>Watching</td>
                             </tr>
                             
-                            <tr><td>Nike, Inc. (NYSE: NKE)</td></tr>
-                            <tr><td>Adobe, Inc. (NASDAQ: ADBE)</td></tr>
-                            <tr><td>PayPal Holdings, Inc. (NASDAQ: PYPL</td></tr>
+                            <tr>
+                                <td>Nike, Inc. (NYSE: NKE)</td>
+                                <td>Watchlist</td>
+                            </tr>
+                            <tr>
+                                <td>Adobe, Inc. (NASDAQ: ADBE)</td>
+                                <td>Watchlist</td>
+                            </tr>
+                            <tr>
+                                <td>PayPal Holdings, Inc. (NASDAQ: PYPL</td>
+                                <td>Researching</td>
+                            </tr>
                         </table>
                     </div>
                     <div class="short-term">
                         <table>
-                            <caption>Investment Watchlist</caption>
+                            <caption>Short-Term Watchlist</caption>
                             <tr>
                                 <th>Stock</th>
+                                <th>Status</th>
                             </tr>
                             <tr>
-                                <td>NVIDIA Corporation (NASDAQ: NVDA)</td>
+                                <td>Twitter, Inc. (NASDAQ: TWTR)</td>
+                                <td>Watching</td>
                             </tr>
-                            
-                            <tr><td>Nike, Inc. (NYSE: NKE)</td></tr>
-                            <tr><td>Adobe, Inc. (NASDAQ: ADBE)</td></tr>
-                            <tr><td>PayPal Holdings, Inc. (NASDAQ: PYPL</td></tr>
                         </table>
                     </div>
                 </section>
