Created Daily page html and css, created calendar page html, fixed footer bugs, redesigned resources page, and added more content

--- a/analysis.html
+++ b/analysis.html
@@ -60,14 +60,14 @@
                     <p class="detail-text-itl">6/1/2020</p>
                     <p class="detail-text">NASDAQ: FB</p>
                     <h2 class="lrg-txt">Facebook, Inc.</h2>
-                    <a href="" class="btn3">Read More</a>
+                    <a href="analysis-pages/fb.html" class="btn3">Read More</a>
                 </div>
                 <hr class="hr-short">
                 <div class="analysis-content">
                     <p class="detail-text-itl">5/18/2020</p>
                     <p class="detail-text">NASDAQ: ATVI</p>
                     <h2 class="lrg-txt">Activision Blizzard, Inc.</h2>
-                    <a href="" class="btn3">Read More</a>
+                    <a href="analysis-pages/atvi.html" class="btn3">Read More</a>
                 </div>
                 <hr class="hr-short">
             </section>
