--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/marketpal-logo.svg">
-    <title>Home</title>
+    <title>Blog</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/blog.css">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
@@ -55,7 +55,7 @@
                 <p class="detail-text-itl"></p>
                 <h2 class="title-text-center"></h2>
                 <p class="detail-text"></p>
-                <a href="" class="btn">Read More</a>
+                <a href="" class="btn4">Read More</a>
             </div>
             <hr class="hr-short">
             -->
@@ -64,7 +64,7 @@
                 <p class="detail-text-itl">6/5/2020</p>
                 <h2 class="title-text-center">Diversification, Diversification, Diversification... Why it's Not Great</h2>
                 <p class="detail-text">Many people are told that diversification is a really good "strategy" for any investor. But what's the point in putting small amounts of money into a bunch of companies you don't understand if you know how to pick stocks? If you feel the need to diversify because a small portfolio doesn't let you sleep at night, either you need to sell those stocks or get better at analyzing businesses. More isn't always better when you understand what you have.    </p>
-                <a href="" class="btn">Read More</a>
+                <a href="blog-posts/diversification.html" class="btn4">Read More</a>
             </div>
             <hr class="hr-short">
             <div class="basic-container-cnt-txt">
@@ -72,15 +72,14 @@
                 <p class="detail-text-itl">5/29/2020</p>
                 <h2 class="title-text-center">The Bullearish Market and Twump Issues</h2>
                 <p class="detail-text">This was a packed week, with the S&P 500 breaking above the 3,000 psychological level, breaking above the 200 ema, big drop in video game stocks, Trumps battle with Twitter, or as I call it, "Twump" and Section 230, fear of another trade war with China, 100,000 deaths from COVID, vaccines, and many more things I can't covere cuz ain't nobody got time.</p>
-                <a href="" class="btn">Read More</a>
-            </div>
+                <a href="blog-posts/bullearish-market.html" class="btn4">Read More</a>
             <hr class="hr-short">
             <div class="basic-container-cnt-txt">
                 <img src="blog-posts/b-img/franklin.PNG" alt="GTA 5 Franklin" class="title-img-ins">
                 <p class="detail-text-itl">5/22/2020</p>
                 <h2 class="title-text-center">Gaming Gaining</h2>
                 <p class="detail-text">Big tech and gaming stocks continue their climb some of these companies benefit from the COVID-19 pandemic and stay-at-home orders. Stocks like TTWO, that reported earnings of $1.07 per share when Wall Street was estimating $0.89 per share, going well above those estimates. In this blog I wanted to talk about gaming company earnings and my opinion on whether I think this momentum will last.</p>
-                <a href="" class="btn">Read More</a>
+                    <a href="blog-posts/gaming-gaining.html" class="btn4">Read More</a>
             </div>
         </div>
     </main>
