--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <a class="btn" href="support.html">Support</a>
         </div>
     </header>
-
+    
     <main>
         <div class="wrapper">
             <section id="showcase">
@@ -51,7 +51,7 @@
                     <p class="p-white">New newsletters come out every Monday morning, with new ideas, tips, updates, recommendations, potential plays, and much more!</p>    
                 </div>
                 <div class="btn-container">
-                    <a class="btn2" href="newsletter.html">Sign Up</a>
+                    <a href="newsletter.html" class="btn2">Sign Up</a>
                 </div>
             </section>
             <section class="main-container">
@@ -59,14 +59,14 @@
                     <h2 class="h1-white">Daily Content</h2>
                     <p class="p-white">Every day I’ll post cool moves on stocks I’m wathcing, relevant news, and more!</p>
                     <div class="btn-container">
-                        <a class="btn2" href="content.html">Check it Out</a>
+                        <a class="btn2" href="dailies.html">Check it Out</a>
                     </div>
                 </div>
                 <div class="top-right">
                     <h2 class="section-heading">Calendar</h2>
                     <i class="far fa-calendar-alt fa-4x"></i>
                     <div class="btn-container">
-                        <a href="" class="btn">View</a>
+                        <a href="calendar.html" class="btn">View</a>
                     </div>
                 </div>
                 <div class="bottom-right">
