Fixed typo on front page, Updated content on Daily Content, and added "Coming Soon" page to support.html

--- a/dailies.html
+++ b/dailies.html
@@ -57,7 +57,7 @@
             <section class="additional-events">
                 <div class="left-event">
                     <h2 class="section-heading">Today's find</h2>
-                    <b><p>Coty, Inc.</p></b>
+                    <b><p>Coty, Inc. (NYSE: COTY)</p></b>
                     <p class="writing-text">I came across an interesting looking stock today by the name of Coty, Inc. Coty is a cosmetics company, who's portfolio includes brands such as Gucci, Balenciaga, CoverGirl, Lancaster, Calvin Klein, Beyonce, Nautica, and many more. This definitely catches my attention because of these very well known brands. I will be looking into this stock further these next couple of weeks to see whether or not it's worth putting some money into, however, I don't know how much growth potential is has over the next 5-10 years.</p>
                 </div>
                 <div class="right-event">
