--- a/support.html
+++ b/support.html
@@ -6,7 +6,6 @@
     <link rel="icon" href="img/marketpal-logo.svg">
     <title>Home</title>
     <link rel="stylesheet" href="css/main.css">
-    <link rel="stylesheet" href="css/home.css">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -41,42 +40,10 @@
             <a class="btn" href="support.html">Support</a>
         </div>
     </header>
-    
+
     <main>
         <div class="wrapper">
-            <section id="showcase">
-                <div class="bg-img"></div>
-                <div class="showcase-content">
-                    <h1 class="h1-white">The MarketPal Newsletter</h1>
-                    <p class="p-white">New newsletters come out every Monday morning, with new ideas, tips, updates, recommendations, potential plays, and much more!</p>    
-                </div>
-                <div class="btn-container">
-                    <a href="newsletter.html" class="btn2">Sign Up</a>
-                </div>
-            </section>
-            <section class="main-container">
-                <div class="main-box">
-                    <h2 class="h1-white">Daily Content</h2>
-                    <p class="p-white">Every day I’ll post cool moves on stocks I’m watching, relevant news, and more!</p>
-                    <div class="btn-container">
-                        <a class="btn2" href="dailies.html">Check it Out</a>
-                    </div>
-                </div>
-                <div class="top-right">
-                    <h2 class="section-heading">Calendar</h2>
-                    <i class="far fa-calendar-alt fa-4x"></i>
-                    <div class="btn-container">
-                        <a href="calendar.html" class="btn">View</a>
-                    </div>
-                </div>
-                <div class="bottom-right">
-                    <h2 class="section-heading">Resources</h2>
-                    <i class="fas fa-toolbox fa-4x"></i>
-                    <div class="btn-container">
-                        <a href="resources.html" class="btn">Check it Out</a>
-                    </div>
-                </div>
-            </section>
+            <h1>Coming Soon</h1>
         </div>
     </main>
 
