--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <div class="wrapper">
             <h1>About The MarketPal</h1>
             <div class="basic-container">
-                <p>Hi, I’m Anthony, the creator of The MarketPal. This website is meant to help investors and those who want to learn to invest, find the necessary research they need to analyze a company before they invest in it. Here you will find helpful resources such as the stock analysis research papers, blogs, a newsletter, and sources of information you can go to instead of looking all over the internet for them. Especially if you're a beginner and don't know where to start. </p>
+                <p>Hi, I’m Anthony, the creator of The MarketPal. I consider myself a student of the stock market and I wanted to create something where investors can come together to talk investing. This website is an outlet for me to share what I know and share the things I learn along the way in my journey to becoming the best investor I can be. I want people to see the process of what it's like, the work that goes into it, and what it takes to become a good investor. I'll share what I'm learning, where I'm learning things from, I share my portfolio, my thoughts, and ideas. I want other investors and people who want to learn to invest, to learn with me as I go along my journey, so we can all be the best investors we can be. Investing is awesome, it should be enjoyed and learned properly.</p>
             </div>
             <h2 class="section-heading">Schedules:</h2>
             <div class="basic-container">
