--- a/blog.html
+++ b/blog.html
@@ -60,6 +60,14 @@
             <hr class="hr-short">
             -->
             <div class="basic-container-cnt-txt">
+                <img src="img/shopping-blog.jpg" alt="Shopping bags" class="title-img-ins">
+                <p class="detail-text-itl">6/12/2020</p>
+                <h2 class="title-text-center">Why I'm Interested in Fashion Stocks</h2>
+                <p class="detail-text">Fashion is an area where people love to spend. People will spend large amounts of money in things that make them stand out, make them look good, feel good, and boost their mood. When you're able to find a strong and powerful brand, find the winners in an industry, and stick with it long term if it's smart to do so, you're in for some good profits.</p>
+                <a href="blog-posts/fashion-stocks.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
+            <div class="basic-container-cnt-txt">
                 <img src="blog-posts/b-img/diversity-scanner.jpg" alt="Think or Swim stock scanner" class="title-img-ins">
                 <p class="detail-text-itl">6/5/2020</p>
                 <h2 class="title-text-center">Diversification, Diversification, Diversification... Why it's Not Great</h2>
