--- a/calendar.html
+++ b/calendar.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/marketpal-logo.svg">
-    <title>Home</title>
+    <title>Calendar</title>
     <link rel="stylesheet" href="css/main.css">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
 
