Made changes to css and changes to html contents

--- a/blog-posts/fashion-stocks.html
+++ b/blog-posts/fashion-stocks.html
@@ -18,10 +18,10 @@
         </div>
         <section class="logo-nav">
             <div class="logo">
-                <a href="index.html">
+                <a href="../index.html">
                     <img id="logo-white" src="../img/themarketpal-white.svg" alt="The MarketPal Logo">
                 </a>
-                <a href="index.html">
+                <a href="../index.html">
                     <img id="logo-black" src="../img/themarketpal-black.svg" alt="The MarketPal Logo">
                 </a>
                 <hr class="logo-hr">
@@ -45,6 +45,7 @@
     <main>
         <div class="wrapper">
             <div class="blog-wrapper">
+                <img src="../blog-posts/b-img/mall-crowd-light.jpg" alt="Shopping mall" class="img-insert">
                 <h1>Why I'm Interested in Fashion Stocks</h1>
                 <p class="detail-text-itl">6/12/2020</p>
                 <p class="detail-text-itl">Author: Anthony Diaz</p>
