--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,8 @@
         <div class="wrapper">
             <h1>Blog</h1>
             <div class="basic-container">
-                <p>New blog every Friday! Blogs cover events that happened throughout the week, company earnings, my thoughts on the market, thoughts on the topic of investing, etc.</p>
+                <!-- There is a style on this element that centers the text on the y axis on the center of the page -->
+                <p style="text-align: center;">New blog every Friday! Talking stocks and learning.</p>
             </div>
             <br>
             <!--
@@ -60,7 +61,15 @@
             <hr class="hr-short">
             -->
             <div class="basic-container-cnt-txt">
-                <img src="img/shopping-blog.jpg" alt="Shopping bags" class="title-img-ins">
+                <img src="blog-posts/b-img/pile-of-papers.jpg" alt="Pexels.com pile of papers image" class="title-img-ins">
+                <p class="detail-text-itl">6/19/2020</p>
+                <h2 class="title-text-center">How to Get Through Annual Reports Like Warren Buffett If You're A Slow Reader</h2>
+                <p class="detail-text">Okay, so Warren Buffett is huge on reading, as those of us who follow him already know. He is big on reading annual reports to understand the business that you're investing in, but also reading ALL of the annual reports for their competitors as well. But what do you do when you're a slow reading trying to get through hundreds of pages a day?</p>
+                <a href="blog-posts/read-reports-faster.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
+            <div class="basic-container-cnt-txt">
+                <img src="blog-posts/b-img/shopping-blog.jpg" alt="Shopping bags" class="title-img-ins">
                 <p class="detail-text-itl">6/12/2020</p>
                 <h2 class="title-text-center">Why I'm Interested in Fashion Stocks</h2>
                 <p class="detail-text">Fashion is an area where people love to spend. People will spend large amounts of money in things that make them stand out, make them look good, feel good, and boost their mood. When you're able to find a strong and powerful brand, find the winners in an industry, and stick with it long term if it's smart to do so, you're in for some good profits.</p>
