--- a/dailies.html
+++ b/dailies.html
@@ -47,11 +47,9 @@
             <h1>Daily Content</h1>
             <section class="main-event">
                 <div class="basic-container">
-                    <h2 class="section-heading">CCL Stock Thoughts</h2>
-                    <p class="writing-text">CCL had been on quite the run, making it all the way to $25 per share on Tuesday, but quickly coming off of those levels yesterday and today. Today, the market is down quite substantially, and every stock on my watchlist at the moment is red. Of course, I'm on the search for some bargains in the market I can take advantage of, but finding good companies, at good prices, even with this drop, is proving to be a challenge. CCL dropped back down to the $17 per share level and I'm debating whether or not I want to sell the position. For the most part, I'm coming to the conclusion of continuing to hold for the long-term as planned, because I was not expecting this pullback in the market. With markets going up much quicker than I had expected, I was planning on taking some shares off the table, and putting that money to work on other stock I find that I really like. However, with this pullback, I'm not as concerned with the stock continuing to make it's way to the moon, and I do think I want to hold it. The plan, originally, was to just sell once the stock started to become overvalued, or was at a fair valuation. The stock currently is still undervalued, therefore, I would still like to hold it. Earnings for CCL are coming up soon and I'm not expecting them to be good whatsoever. But unless the stock continues to make some tremendous moves to the upside, to where it would make sense to take some profits, I'm not going to sell out just yet. Unless of course, there was some unexpected event that really made me change my mind.</p>
-                    <a href="img/sell-ccl-high.PNG" target="_blank">
-                        <img src="img/sell-ccl-high.PNG" alt="Carnival Corporation stock" class="img-insert">
-                    </a>
+                    <h2 class="section-heading">Robinhood and the Market Sell-off</h2>
+                    <p class="writing-text">CNBC uploaded this video behind the big dump in the market this past Thursday. I thought it was pretty interesting.</p>
+                        <iframe src="https://www.youtube.com/embed/MH2dru5y3xc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <div class="resources-container">
                         
                     </div>
