--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
             <section id="showcase">
                 <div class="bg-img"></div>
                 <div class="showcase-content">
-                    <h1 class="h1-white">The MarketPal Newsletter</h1>
-                    <p class="p-white">New newsletters come out every Monday morning, with new ideas, tips, updates, recommendations, potential plays, and much more!</p>    
+                    <h1 class="h1-white">Latest Blog on The MarketPal</h1>
+                    <p class="p-white"><b>How To Get Through Annual Reports Like Warren Buffet When You're A Slow Reader</b></p>    
+                    <p class="p-white">As Warren Buffett and Charlie Munger preach, reading annual reports is very important. The way to fully understand a business and its competition, risks, and overall strength, is to read that business' annual reports, as well as the annual report of all of their competitors whose reports you can get your hands on. However, this can be very challenging when you're trying to get through financial statements, but you're just too damn slow at getting through them. Hours go by and you're still on page 20, you get discouraged, close the report and go watch YouTube. Just to try again later and do the same thing. Hopefully some of these resources can help you out and help you get through these reports quicker.</p>    
                 </div>
                 <div class="btn-container">
-                    <a href="newsletter.html" class="btn2">Sign Up</a>
+                    <a href="blog-posts/read-reports-faster.html" class="btn2">Keep Reading</a>
                 </div>
             </section>
             <section class="main-container">
@@ -60,13 +61,6 @@
                     <p class="p-white">Every day I’ll post cool moves on stocks I’m watching, relevant news, and more!</p>
                     <div class="btn-container">
                         <a class="btn2" href="dailies.html">Check it Out</a>
-                    </div>
-                </div>
-                <div class="top-right">
-                    <h2 class="section-heading">Calendar</h2>
-                    <i class="far fa-calendar-alt fa-4x"></i>
-                    <div class="btn-container">
-                        <a href="calendar.html" class="btn">View</a>
                     </div>
                 </div>
                 <div class="bottom-right">
