--- a/portfolio.html
+++ b/portfolio.html
@@ -120,7 +120,7 @@
                             <td>Long-Term</td>
                         </tr>
                         <tr>
-                            <td>Take-Two Interactive, Inc. (NASDAQ: CNK)</td>
+                            <td>Take-Two Interactive, Inc. (NASDAQ: TTWO)</td>
                             <td>2</td>
                             <td class="status-o">Owned</td>
                             <td>Long-Term</td>
@@ -129,48 +129,36 @@
                 </table>
             </section>
             <section class="basic-container">
-                <h2 class="section-heading">Watchlists</h2>
-                <section class="watchlist-containers">
-                    <div class="long-term">
-                        <table>
-                            <caption>Long-Term Watchlist</caption>
-                            <tr>
-                                <th>Stock</th>
-                                <th>Status</th>
-                            </tr>
-                            <tr>
-                                <td>NVIDIA Corporation (NASDAQ: NVDA)</td>
-                                <td>Watching</td>
-                            </tr>
-                            
-                            <tr>
-                                <td>Nike, Inc. (NYSE: NKE)</td>
-                                <td>Watchlist</td>
-                            </tr>
-                            <tr>
-                                <td>Adobe, Inc. (NASDAQ: ADBE)</td>
-                                <td>Watchlist</td>
-                            </tr>
-                            <tr>
-                                <td>PayPal Holdings, Inc. (NASDAQ: PYPL</td>
-                                <td>Researching</td>
-                            </tr>
-                        </table>
-                    </div>
-                    <div class="short-term">
-                        <table>
-                            <caption>Short-Term Watchlist</caption>
-                            <tr>
-                                <th>Stock</th>
-                                <th>Status</th>
-                            </tr>
-                            <tr>
-                                <td>Twitter, Inc. (NASDAQ: TWTR)</td>
-                                <td>Watching</td>
-                            </tr>
-                        </table>
-                    </div>
-                </section>
+                <div class="watchlist-container">
+                    <table>
+                        <caption>Watchlist</caption>
+                        <tr>
+                            <th scope="col">Stock</th>
+                            <th scope="col">Status</th>
+                        </tr>
+                        <tr>
+                            <td>NVIDIA Corporation (NASDAQ: NVDA)</td>
+                            <td>Watchlist</td>
+                        </tr>
+                        
+                        <tr>
+                            <td>Nike, Inc. (NYSE: NKE)</td>
+                            <td>Watchlist</td>
+                        </tr>
+                        <tr>
+                            <td>Adobe, Inc. (NASDAQ: ADBE)</td>
+                            <td>Watchlist</td>
+                        </tr>
+                        <tr>
+                            <td>PayPal Holdings, Inc. (NASDAQ: PYPL</td>
+                            <td>Watchlist</td>
+                        </tr>
+                        <tr>
+                            <td>Twitter, Inc. (NASDAQ: TWTR</td>
+                            <td>Watchlist</td>
+                        </tr>
+                    </table>
+                </div>
             </section>
         </div>
     </main>
