Updated blog contents

--- a/blog.html
+++ b/blog.html
@@ -59,7 +59,15 @@
                 <a href="" class="btn4">Read More</a>
             </div>
             <hr class="hr-short">
-            -->
+        -->
+            <div class="basic-container-cnt-txt">
+                <img src="blog-posts/b-img/oxford-form-10k.JPG" alt="Oxford Industries Form 10-K" class="title-img-ins">
+                <p class="detail-text-itl">6/26/2020</p>
+                <h2 class="title-text-center">The Importance of Reading Annual Reports</h2>
+                <p class="detail-text">Warren Buffett, who I talk about quite a bit, and will continue to talk about him and his teachings in the future, always preaches that investors should be reading as many annual reports as they possibly can.</p>
+                <a href="blog-posts/importance-annual-reports.html" class="btn4">Read More</a>
+            </div>
+            <hr class="hr-short">
             <div class="basic-container-cnt-txt">
                 <img src="blog-posts/b-img/pile-of-papers.jpg" alt="Pexels.com pile of papers image" class="title-img-ins">
                 <p class="detail-text-itl">6/19/2020</p>
