--- a/blog-posts/read-reports-faster.html
+++ b/blog-posts/read-reports-faster.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/blog.css">
     <script src="https://kit.fontawesome.com/0c2674f1e9.js" crossorigin="anonymous"></script>
+
+    <!-- Specific page styling -->
+    <style>
+        .blog-heading{
+            display: flex;
+            background: #000 url("b-img/newspapers-img.jpg");
+            background-size: cover;
+            width: 100%;
+            height: 250px;
+            justify-content: center;
+            align-items: center;
+            position: relative;
+            margin-bottom: 40px;
+        }
+    </style>
 </head>
 <body>
     <header>
