Updated recent blog on home page and blog header img on new blog post

--- a/blog-posts/importance-annual-reports.html
+++ b/blog-posts/importance-annual-reports.html
@@ -13,7 +13,7 @@
     <style>
         .blog-heading{
             display: flex;
-            background: #000 url("b-img/oxford-form-10k.jpg");
+            background: #000 url("b-img/oxford-form-10k.JPG");
             background-size: cover;
             width: 100%;
             height: 250px;
