--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="bg-img"></div>
                 <div class="showcase-content">
                     <h1 class="h1-white">Latest Blog on The MarketPal</h1>
-                    <p class="p-white"><b>How To Get Through Annual Reports Like Warren Buffet When You're A Slow Reader</b></p>    
-                    <p class="p-white">As Warren Buffett and Charlie Munger preach, reading annual reports is very important. The way to fully understand a business and its competition, risks, and overall strength, is to read that business' annual reports, as well as the annual report of all of their competitors whose reports you can get your hands on. However, this can be very challenging when you're trying to get through financial statements, but you're just too damn slow at getting through them. Hours go by and you're still on page 20, you get discouraged, close the report and go watch YouTube. Just to try again later and do the same thing. Hopefully some of these resources can help you out and help you get through these reports quicker.</p>    
+                    <p class="p-white"><b>The Importance of Reading Annual Reports</b></p>    
+                    <p class="p-white">Warren Buffett, who I talk about quite a bit, and will continue to talk about him and his teachings in the future, always preaches that investors should be reading as many annual reports as they possibly can.</p>    
                 </div>
                 <div class="btn-container">
                     <a href="blog-posts/read-reports-faster.html" class="btn2">Keep Reading</a>
